fixed header margin on smallest size

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,6 +230,7 @@ input[type=submit] {
     .headerTitle {
         float: none;
         width: 100vw;
+        margin-left: 0;
     }
 
     .navLinks {
